syntax = "proto3";

package chat_v1;

option go_package = "github.com/Muvi7z/chat-server-s/api/chat_v1;chat_v1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/type.proto";
import "google/protobuf/wrappers.proto";

service ChatV1 {
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse) {}
  rpc ConnectChat (ConnectChatRequest) returns (stream Message) {}
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty) {}
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
}

enum Role {
  user = 0;
  admin = 1;
}

message Message {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp created_at = 3;
}

message DeleteRequest {
  int64 id = 1;
}

message SendMessageRequest {
  string char_id = 1;
  Message Message = 2;
}

message ConnectChatRequest {
  string chat_id = 1;
  string username = 2;
}

message CreateChatRequest {
  repeated string usernames = 1;
}

message CreateChatResponse {
  string chat_id = 1;
}

